--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ numpy~=1.19.5
 pyarrow~=6.0.1
 scipy~=1.4.1
 scikit-learn==0.20.0
-keras~=2.2.0
-tensorflow~=1.9.0
+keras
+tensorflow
 lmfit==1.0.1
 matplotlib~=3.2.0
 joblib==1.1.0
